[package]
name = "cronify"
version = "0.1.0"
authors = ["chris13524 <chris@hichris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crontab = "0.2.0"
ctrlc = { version = "3.1.3", features = ["termination"] }
nix = "0.20.2"
